[package]
name = "bumper"
version = "0.1.0"
edition = "2021"
description = "A simple car driving simulation based on keypresses."
author = "Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"
repository = "https://github.com/aalekhpatel07/Self-driving-car"
license = "MIT"
keywords = ["html-canvas", "car", "driving", "wasm", "webAssembly"]
readme = "./README.md"
homepage = "https://rust-wasm.d3r3dd4ykhyyne.amplifyapp.com/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.58"
wasm-bindgen = { version = "0.2.81" }
web-sys = { version = "0.3.4", features = ["CanvasRenderingContext2d", "Document", "Element", "Window", "HtmlCanvasElement", "console"]}
serde = { version = "1.0.138", features = ["derive"] }
serde_json = { version = "1.0.82" }
