[package]
name = "bumper"
version = "0.1.0"
edition = "2021"
description = "A simple car driving simulation based on keypresses."
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
repository = "https://github.com/aalekhpatel07/bumper"
license = "MIT"
keywords = ["html-canvas", "car", "driving", "wasm", "webAssembly"]
readme = "./README.md"
homepage = "https://rust-wasm.d3r3dd4ykhyyne.amplifyapp.com/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bumper"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[features]
default = ["client"]
client = ["js-sys", "wasm-bindgen", "web-sys", "uuid"]
socket = ["tokio-tungstenite", "tokio", "tungstenite", "futures-channel", "futures", "uuid"]

[dependencies]
js-sys = { version = "0.3.58", optional = true }
wasm-bindgen = { version = "0.2.81", optional = true }
web-sys = { version = "0.3.4", features = ["CanvasRenderingContext2d", "Document", "Element", "Window", "HtmlCanvasElement", "console"], optional = true}
uuid = { version = "1.1.2", optional = true, features = ["v4", "fast-rng", "js"]}
serde = { version = "1.0.138", features = ["derive"] }
serde_json = { version = "1.0.82" }
serde_derive = { version = "1.0.138" }
tokio-tungstenite = { version = "0.17.1", optional = true, features = ["native-tls"] }
tokio = { version = "*", optional = true, features = ["full"] }
tungstenite = { version = "0.17.2", optional = true}
futures-channel = { version = "0.3.21", optional = true }
futures = { version = "0.3.21", optional = true}

[[bin]]
name = "server"
path = "src/main.rs"
required-features = ["socket"]
