[package]
name = "bumper-core"
version = "0.1.0"
edition = "2021"
description = "A simple car driving simulation based on keypresses."
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
repository = "https://github.com/aalekhpatel07/bumper"
license = "MIT"
keywords = ["html-canvas", "car", "driving", "wasm", "webAssembly"]
readme = "./README.md"
homepage = "https://rust-wasm.d3r3dd4ykhyyne.amplifyapp.com/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "js"]}
serde = { version = "1.0.138", features = ["derive"] }
serde_json = { version = "1.0.82" }
serde_derive = { version = "1.0.138" }

[[bin]]
name = "server"
path = "src/main.rs"
required-features = ["socket"]
