[package]
name = "bumper-server"
version = "0.1.0"
edition = "2021"
description = "A simple car driving simulation based on keypresses."
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
repository = "https://github.com/aalekhpatel07/bumper"
license = "MIT"
keywords = ["html-canvas", "car", "driving", "wasm", "webAssembly"]
readme = "./README.md"
homepage = "https://rust-wasm.d3r3dd4ykhyyne.amplifyapp.com/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio-tungstenite", "tokio", "tungstenite", "futures-channel", "futures", "uuid", "hashbrown"]

[dependencies]
rand = "*"
hashbrown = { version = "*", optional = true, features = ["serde"] }
uuid = { version = "1.1.2", optional = true, features = ["v4", "fast-rng", "js"]}
serde = { version = "1.0.138", features = ["derive"] }
serde_json = { version = "1.0.82" }
serde_derive = { version = "1.0.138" }
tokio-tungstenite = { version = "0.17.1", optional = true, features = ["native-tls"] }
tokio = { version = "*", optional = true, features = ["full"] }
tungstenite = { version = "0.17.2", optional = true}
futures-channel = { version = "0.3.21", optional = true }
futures = { version = "0.3.21", optional = true}
bumper-core = { path = "../bumper-core" }
log = "0.4.17"
simple_logger = "2.2.0"
