[package]
name = "ggpo-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "ringbuf" ]
ringbuf = [ "dep:ringbuf" ]

[dependencies]
anyhow = { version = "1.0.58" }
ringbuf = { version = "0.2.8", optional = true }